<resources>
    <string name="app_name">Knotenliste</string>

    <string name="accountType">net.freifunk.paderborn.nodes</string>
    <string name="accountName">Freifunk Paderborn: Knotenliste</string>
    <string name="accountAuthority">net.freifunk.paderborn</string>

    <string name="search_hint">Suche Knoten</string>
    <string name="labelRemoteId">Remote Id:</string>
    <string name="labelClientCount">Client Count:</string>
    <string name="labelFirmware">Firmware:</string>
    <string name="labelMacs">Macs:</string>
    <string name="labelGateway">Gateway:</string>
    <string name="labelClient">Client:</string>
    <string name="labelCoordinates">Coordinates:</string>

    <plurals
        name="clientLabel">
        <item quantity="one">%d Client</item>
        <item quantity="other">%d Clients</item>
    </plurals>
</resources>
